--- a/package.json
+++ b/package.json
@@ -9,18 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@truffle/hdwallet-provider": "^2.0.15",
-    "@web3uikit/core": "^0.2.2",
-    "@web3uikit/icons": "^0.2.2",
+    "@truffle/hdwallet-provider": "^2.1.0",
+    "@web3uikit/core": "^0.2.4",
+    "@web3uikit/icons": "^0.2.4",
     "@web3uikit/web3": "^0.2.2",
     "moralis-v1": "^1.11.0",
-    "next": "12.3.1",
+    "next": "13.0.0",
+    "npm-check-updates": "^16.3.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-moralis": "^1.4.2"
+    "react-moralis": "^1.4.2",
+    "tailwind": "^4.0.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.12",
     "eslint": "8.26.0",
-    "eslint-config-next": "12.3.1"
+    "eslint-config-next": "13.0.0",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.1"
   }
 }
