--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@svgr/webpack": "^6.5.1",
     "@truffle/hdwallet-provider": "^2.1.0",
     "@web3uikit/core": "^0.2.4",
     "@web3uikit/icons": "^0.2.4",
@@ -19,7 +20,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-moralis": "^1.4.2",
-    "tailwind": "^4.0.0"
+    "tailwind": "^4.0.0",
+    "truncate-eth-address": "^1.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
